--- a/Mango.Services.AuthAPI/Mango.Services.AuthAPI.csproj
+++ b/Mango.Services.AuthAPI/Mango.Services.AuthAPI.csproj
@@ -9,6 +9,9 @@
   <ItemGroup>
 	  <PackageReference Include="AutoMapper" Version="12.0.0" />
 	  <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.5" />
+	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.5" />
+	  <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.5" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.5" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.5">
